Fixed double border in grid

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 
 #grid-container {
     display: grid;
+    grid-gap: 1px;
+    border: 1px solid;
+    background-color: black;
 }
 
 #grid-container div {
@@ -12,5 +15,5 @@
 }
 
 .grid-item {
-    border: 1px solid;
+    background-color: white;
 }
